--- a/css/mobile.css
+++ b/css/mobile.css
@@ -377,7 +377,6 @@
 
 }
 
-
 @media (max-width: 720px) {
 
     li {
@@ -505,10 +504,6 @@
 }
 
 @media (min-width: 768px) and (max-width: 820px) {
-    .projects-grid {
-        grid-template-columns: 1fr;
-    }
-
     .nav {
         border-bottom: 3px solid var(--cor2);
     }
@@ -518,27 +513,18 @@
         font-size: 3.5rem;
     }
 
-    #img-um {
-        display: none;
-    }
-
-    #img-dois {
-        display: none;
-    }
-
-
-    #welcome-section {
-        height: 80vh;
-        background-color: white;
-        margin-bottom: 8rem;
-    }
-
     .container-colunas {
         width: 100%;
         height: 100vh;
         display: flex;
         align-items: center;
         justify-content: start;
+    }
+    
+    #welcome-section {
+        height: 80vh;
+        background-color: white;
+        margin-bottom: 8rem;
     }
 
     .meuNome {
@@ -566,6 +552,20 @@
         font-weight: 600;
         letter-spacing: -1px;
         display: flex;
+    }
+
+    #img-um {
+        display: none;
+    }
+
+    #img-dois {
+        display: none;
+    }
+
+    /* ================================================= */
+
+    .projects-grid {
+        grid-template-columns: 1fr;
     }
 
     /* ================================================= */
