--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,6 +1,8 @@
 
 @media (min-width: 280) and (max-width: 375px) {
 
+     /* Seção-um */
+
     li {
         color: var(--cor2);
         font-size: 17px;
@@ -56,6 +58,7 @@
     }
 
     /* ================================================= */
+    /* Seção-dois */
 
     .projects-grid {
         grid-template-columns: 1fr;
@@ -82,6 +85,7 @@
     }
 
   /* ================================================= */
+  /* Seção-três */
 
     #secao-tres h2 {
         font-size: 2.7rem;
