seções sinalizadas max-width 481px

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -395,6 +395,8 @@
 
 @media (min-width: 464px) and (max-width: 481px) {
 
+    /* Seção-um */
+
     li {
         color: var(--cor2);
     }
@@ -449,6 +451,7 @@
     }
 
     /* ================================================= */
+    /* Seção-dois */
 
     .projects-grid {
         grid-template-columns: 1fr;
@@ -471,6 +474,7 @@
     }
 
     /* ================================================= */
+    /* Seção-três */
 
 
     #secao-tres h2 {
