seções sinalizadas max-width 820px

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -652,6 +652,9 @@
 }
 
 @media (min-width: 768px) and (max-width: 820px) {
+
+     /* Seção-um */
+    
     .nav {
         border-bottom: 3px solid var(--cor2);
     }
@@ -711,6 +714,7 @@
     }
 
     /* ================================================= */
+     /* Seção-dois */
 
     .projects-grid {
         grid-template-columns: 1fr;
@@ -734,6 +738,7 @@
     }
 
     /* ================================================= */
+     /* Seção-três */
 
 
     #secao-tres h2 {
